<?xml version="1.0"?>
<package>
    <name>sensor_imu</name>
    <version>17.1.19</version>
    <description>A ROS Driver for MPU6050 by using serial</description>

    <maintainer email="gogojjh@foxmail.com">Kinghao Chiao</maintainer>
    <author>Kinghao Chiao</author>

    <license>BSD</license>

    <url type="website">http://wiki.ros.org/sensor_imu</url>
    <url type="repository">http://github.com/gogojjh/sensor_imu</url> 

    <!-- list depending package -->
    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>

    <buildtool_depend>catkin</buildtool_depend>

</package>